--- a/src/styles.css
+++ b/src/styles.css
@@ -56,12 +56,14 @@ body {
 
 .banner_slide {
   white-space: nowrap;
+  height: 100%;
   transition: transform 1s;
 }
 
 .slide {
   display: inline-block;
   width: 100%;
+  height: 100%;
   position: relative;
 }
 
@@ -100,17 +102,17 @@ body {
   position: absolute;
   left: 5%;
   top: 20%;
-  transform: translateY(350px);
+  transform: translateY(320px);
   opacity: 0;
   transition: transform 2s, opacity 1s;
 }
 
 .button_slide_link.active {
-  transform: translateY(0);
+  transform: translateY(120px);
   opacity: 1;
 }
 
-.chandelier_1 {
+.chandelier {
   position: absolute;
   width: 300px;
   height: 200px;
@@ -120,7 +122,7 @@ body {
   transition: transform 3s, opacity 2s;
 }
 
-.chandelier_1.active {
+.chandelier.active {
   transform: translateX(-300px);
   opacity: 1;
 }
@@ -136,7 +138,7 @@ body {
 }
 
 .title_slide.active {
-  top: 25%;
+  top: 30%;
   opacity: 1;
   text-shadow: 2px 2px 2px black;
 }
@@ -155,7 +157,7 @@ body {
 }
 
 .description_slide.active {
-  top: 32%;
+  top: 40%;
   opacity: 1;
 }
 
@@ -171,11 +173,11 @@ body {
   left: 10px;
   top: 110%;
   opacity: 0;
-  transition: top 2.5s, opacity 1s;
+  transition: top 2.7s, opacity 1s;
   text-shadow: 2px 2px 2px black;
 }
 
 .button_slide_standart.active {
-  top: 42%;
+  top: 53%;
   opacity: 1;
 }
