--- a/src/styles.css
+++ b/src/styles.css
@@ -31,13 +31,13 @@ body {
 .header_container {
   height: 100%;
   padding: 0 20px;
-  display: flex;
 }
 
 .logo {
-  color: rgba(63, 21, 153, 0.7);
-  text-align: right;
+  display: inline-block;
+  color: #49134c;
   font-size: 0;
+  text-align: right;
 }
 
 .logo_title {
@@ -57,7 +57,7 @@ body {
 .banner_slide {
   white-space: nowrap;
   height: 100%;
-  transition: transform 1s;
+  transition: transform 1.2s;
 }
 
 .slide {
@@ -81,49 +81,33 @@ body {
 .slide_toggle_button {
   display: inline-block;
   height: 20px;
-  width: 3px;
-  background-color: white;
   margin-right: 30px;
-  transition: height 0.3s;
+  transition: height 0.5s;
+  cursor: pointer;
+  padding: 0 4px;
+}
+
+.slide_toggle_button div {
+  width: 4px;
+  height: inherit;
 }
 
 .slide_toggle_button.active {
   height: 60px;
 }
 
-.button_slide_link {
-  height: 50px;
-  padding: 10px 20px;
-  border: 1px solid #dcd2dd;
-  border-radius: 30px;
-  color: #49134c;
-  outline: 0;
-  cursor: pointer;
-  position: absolute;
-  left: 5%;
-  top: 20%;
-  transform: translateY(320px);
-  opacity: 0;
-  transition: transform 2s, opacity 1s;
-}
-
-.button_slide_link.active {
-  transform: translateY(120px);
-  opacity: 1;
-}
-
 .chandelier {
   position: absolute;
   width: 300px;
   height: 200px;
-  top: 5%;
+  top: 7%;
   right: -300px;
   opacity: 0;
-  transition: transform 3s, opacity 2s;
+  transition: right 3s, opacity 2s;
 }
 
 .chandelier.active {
-  transform: translateX(-300px);
+  right: -30px;
   opacity: 1;
 }
 
@@ -132,15 +116,15 @@ body {
   position: absolute;
   left: 10px;
   top: 100%;
-  transition: top 2s, opacity 1s;
+  transition: top 1s, opacity 1s;
   opacity: 0;
   color: white;
+  text-shadow: 2px 2px 4px black;
 }
 
 .title_slide.active {
   top: 30%;
   opacity: 1;
-  text-shadow: 2px 2px 2px black;
 }
 
 .description_slide {
@@ -149,11 +133,11 @@ body {
   font-size: 15px;
   width: 200px;
   white-space: normal;
-  top: 110%;
-  transition: top 2.3s, opacity 1s;
+  top: 100%;
+  transition: top 1.5s, opacity 1s;
   opacity: 0;
   color: white;
-  text-shadow: 2px 2px 2px black;
+  text-shadow: 2px 2px 4px black;
 }
 
 .description_slide.active {
@@ -161,23 +145,23 @@ body {
   opacity: 1;
 }
 
-.button_slide_standart {
+.button_more {
   height: 50px;
   padding: 10px 20px;
-  border: 1px solid white;
   border-radius: 30px;
-  color: white;
   outline: 0;
   cursor: pointer;
   position: absolute;
   left: 10px;
-  top: 110%;
+  top: 100%;
   opacity: 0;
-  transition: top 2.7s, opacity 1s;
-  text-shadow: 2px 2px 2px black;
+  transition: top 2s, opacity 1s;
+  color: white;
+  border: 1px solid lightcyan;
+  text-shadow: 2px 2px 4px black;
 }
 
-.button_slide_standart.active {
+.button_more.active {
   top: 53%;
   opacity: 1;
 }
